<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <fragment
        android:id="@+id/ar_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="356dp"
        android:layout_height="378dp"
        android:background="@drawable/mainbg"
        app:layout_constraintBottom_toTopOf="@+id/ar_fragment"
        app:layout_constraintEnd_toStartOf="@+id/ar_fragment"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/ar_fragment"
        app:layout_constraintTop_toBottomOf="@+id/ar_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/meet"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tap"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/match"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:text="@string/gotit"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/profView"
        android:layout_width="356dp"
        android:layout_height="378dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/ar_fragment"
        app:layout_constraintEnd_toStartOf="@+id/ar_fragment"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/ar_fragment"
        app:layout_constraintTop_toBottomOf="@+id/ar_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/profName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:onClick="onClickLike"
                android:layout_marginBottom="10dp"
                android:text="@string/like"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/passBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:onClick="onClickPass"
                android:text="@string/pass"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/matchView"
        android:layout_width="356dp"
        android:layout_height="250dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/ar_fragment"
        app:layout_constraintEnd_toStartOf="@+id/ar_fragment"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/ar_fragment"
        app:layout_constraintTop_toBottomOf="@+id/ar_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/itsmatch"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/chatBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:onClick="OnClickChat"
                android:text="@string/chat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/closeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:onClick="OnClickClose"
                android:text="@string/close"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/matchesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mainbg"
        android:onClick="OnClickMatches"
        android:text="@string/matches"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>